--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,18 +1,21 @@
-name: Build Docker Image CI
+name: Build WebApp Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: none # [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches: none # [ "main" ]
+    
+  workflow_dispatch: # allows manual run
 
 jobs:
 
-  build:
+  build-container:
 
-    runs-on: [ 'ubuntu-latest', 'windows-latest' ]
+    runs-on: 'ubuntu-latest'
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v3 # This action checks-out your repository under $GITHUB_WORKSPACE, so your workflow can access it.
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      working-directory: WebApp
+      run: docker build . --file Dockerfile --tag dotnet-webapp:$(date +%s)
