--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,4 +18,4 @@ jobs:
     - uses: actions/checkout@v3 # This action checks-out your repository under $GITHUB_WORKSPACE, so your workflow can access it.
     - name: Build the Docker image
       # working-directory: WebApp
-      run: docker build . --file Dockerfile --tag dotnet-webapp:$(date +%s)
+      run: docker build . --file WebApp/Dockerfile --tag dotnet-webapp:$(date +%s)
