--- a/Test/src/test/resources/serenity.conf
+++ b/Test/src/test/resources/serenity.conf
@@ -7,7 +7,7 @@ webdriver {
   driver = firefox
   autodownload = true
 }
-headless.mode = false
+headless.mode = true
 
 serenity {
   test.root = starter
