edits to serenity conf for headless

--- a/Test/src/test/resources/serenity.conf
+++ b/Test/src/test/resources/serenity.conf
@@ -4,7 +4,7 @@
 # WebDriver configuration
 #
 webdriver {
-  driver = firefox
+#   base.url = "http://localhost"
   autodownload = true
 }
 headless.mode = true
@@ -12,9 +12,37 @@ headless.mode = true
 serenity {
   test.root = starter
   compress.filenames = false
-//  take.screenshots = FOR_FAILURES
+  take.screenshots = FOR_FAILURES
 }
 
+environment = run_with_firefox
+
+environments {
+  run_with_firefox {
+    webdriver.driver = firefox
+
+    firefox {
+      arguments = "-headless"
+      preferences {
+        browser {
+          download {
+            folderList = 2
+            dir = "$TEMPDIR/downloads"
+            manager.showWhenStarting = false
+            useDownloadDir = true
+          }
+          helperApps {
+            neverAsk.saveToDisk = "application/octet-stream"
+            alwaysAsk.force = false
+          }
+        }
+      }
+      logLevel = INFO
+      acceptInsecureCerts = true
+      pageLoadStrategy = EAGER
+    }
+  }
+}
 #
 # Chrome options can be defined using the chrome.switches property
 #
