--- a/Test/src/test/resources/serenity.conf
+++ b/Test/src/test/resources/serenity.conf
@@ -3,11 +3,36 @@
 #
 # WebDriver configuration
 #
+# webdriver {
+# #   base.url = "http://localhost"
+#   autodownload = true
+#   driver = chrome
+# }
+
 webdriver {
-#   base.url = "http://localhost"
   autodownload = true
+  capabilities {
+    browserName = "firefox"
+
+#     timeouts {
+#       implicit = 1000
+#       script = 1000
+#       pageLoad = 1000
+#     }
+    pageLoadStrategy = "normal"
+    acceptInsecureCerts = true
+    unhandledPromptBehavior = "dismiss"
+    strictFileInteractability = true
+
+    "moz:firefoxOptions" {
+      args = ["-headless"],
+      prefs {
+        "javascript.options.showInConsole": false
+      },
+      log {"level": "info"},
+    }
+  }
 }
-headless.mode = true
 
 serenity {
   test.root = starter
@@ -15,38 +40,41 @@ serenity {
   take.screenshots = FOR_FAILURES
 }
 
-environment = run_with_firefox
+headless.mode = true
 
-environments {
-  run_with_firefox {
-    webdriver.driver = firefox
+# environment = run_with_firefox
+#
+# environments {
+#   run_with_firefox {
+#     webdriver.driver = firefox
+#
+#     firefox {
+#       arguments = "-headless"
+#       preferences {
+#         browser {
+#           download {
+#             folderList = 2
+#             dir = "$TEMPDIR/downloads"
+#             manager.showWhenStarting = false
+#             useDownloadDir = true
+#           }
+#           helperApps {
+#             neverAsk.saveToDisk = "application/octet-stream"
+#             alwaysAsk.force = false
+#           }
+#         }
+#       }
+#       logLevel = INFO
+#       acceptInsecureCerts = true
+#       pageLoadStrategy = EAGER
+#     }
+#   }
+# }
 
-    firefox {
-      arguments = "-headless"
-      preferences {
-        browser {
-          download {
-            folderList = 2
-            dir = "$TEMPDIR/downloads"
-            manager.showWhenStarting = false
-            useDownloadDir = true
-          }
-          helperApps {
-            neverAsk.saveToDisk = "application/octet-stream"
-            alwaysAsk.force = false
-          }
-        }
-      }
-      logLevel = INFO
-      acceptInsecureCerts = true
-      pageLoadStrategy = EAGER
-    }
-  }
-}
 #
 # Chrome options can be defined using the chrome.switches property
 #
-chrome.switches = """--lang=en-us;--start-maximized;--test-type;--no-sandbox;--ignore-certificate-errors;
-                   --disable-popup-blocking;--disable-default-apps;--disable-extensions-file-access-check;
-                   --incognito;--disable-infobars,--disable-gpu"""
+# chrome.switches = """--lang=en-us;--start-maximized;--test-type;--no-sandbox;--ignore-certificate-errors;
+#                    --disable-popup-blocking;--disable-default-apps;--disable-extensions-file-access-check;
+#                    --incognito;--disable-infobars,--disable-gpu"""
 
