--- a/Test/pom.xml
+++ b/Test/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>cz.cvut.fel.still</groupId>
-    <artifactId>serenity-screenplay-todomvc</artifactId>
+    <artifactId>serenity-screenplay-flights</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Serenity Screenplay project to test TodoMVC page using JUnit 5</name>
+    <name>Serenity Screenplay project to test flight orders page using JUnit 5</name>
 
     <properties>
         <serenity.version>3.3.4</serenity.version>
