--- a/Test/src/test/resources/serenity.conf
+++ b/Test/src/test/resources/serenity.conf
@@ -25,7 +25,7 @@ webdriver {
     strictFileInteractability = true
 
     "moz:firefoxOptions" {
-      args = ["-headless"],
+#       args = ["-headless"],
       prefs {
         "javascript.options.showInConsole": false
       },
